# whill_lab0_ros2

./: .gitignore  README.md  whill_lab.repos
docs/: README.md  m1-environment-setup.md  m2-whill-core.md  m3-extrinsics-from-noetic.md  m3-sensors.md  m4-localization.md  m5-navigation.md  migration-plan.md  session-2026-05-06.md  session-2026-05-07.md  session-2026-05-08.md  session-2026-05-20.md
docs/m3-bench-data/: README.md
docs/m5-maps/: lab.pgm  lab.yaml
network/: 01-velodyne-static.yaml.template
scripts/: check_static.py  configure_proxy.sh  grant_serial_access.sh  import_upstream.sh  install_ros2_humble.sh  install_udev_rules.sh  install_velodyne_network.sh  pcd_to_occupancy_grid.py  setup_workspace.sh
src/whill_localization/: CMakeLists.txt  README.md  package.xml
src/whill_localization/config/: velodyne_whill.yaml
src/whill_localization/launch/: fast_lio_launch.py  localization_launch.py
src/whill_navigation/: CMakeLists.txt  README.md  package.xml
src/whill_navigation/config/: nav2_params.yaml
src/whill_navigation/launch/: nav_launch.py  tf_bridge_launch.py
src/whill_sensors_bringup/: CMakeLists.txt  README.md  package.xml
src/whill_sensors_bringup/launch/: imu_launch.py  sensors_launch.py  static_tf_launch.py
src/whill_sensors_bringup/scripts/: velodyne_self_filter.py
udev/: 99-whill-stack.rules
