<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whill_localization</name>
  <version>0.1.0</version>
  <description>
    LiDAR-Inertial Odometry (FAST-LIO) bringup for the WHILL stack.
    Provides a chair-tuned `velodyne_whill.yaml` config and two launch
    files: one for online use (sensors + FAST-LIO) and one for offline
    replay against a recorded rosbag.
  </description>

  <maintainer email="ygnk0805@outlook.jp">Iruazu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>fast_lio</exec_depend>
  <exec_depend>whill_sensors_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
