<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>whill_navigation</name>
  <version>0.1.0</version>
  <description>
    Nav2 bringup for the WHILL chair. Bridges FAST-LIO's camera_init / body
    frames into the map / odom / base_link TF chain Nav2 expects, and
    composes the M4 localization launch with Nav2 lifecycle nodes.
  </description>

  <maintainer email="ygnk0805@outlook.jp">Iruazu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>whill_localization</exec_depend>
  <exec_depend>whill_sensors_bringup</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- Pulled in lazily once Nav2 is wired up; left commented for now so
       the package can build on hosts that don't yet have ros-humble-nav2-* installed. -->
  <!-- <exec_depend>nav2_bringup</exec_depend> -->
  <!-- <exec_depend>nav2_lifecycle_manager</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
